3 files modified, 4 added

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="header">
   <nav>
     <a routerLink="/home" routerLinkActive="active">Home</a>
+    <a routerLink="/contacto" routerLinkActive="active">Contacto</a>
     <a routerLink="/about" routerLinkActive="active">About</a>
   </nav>
   </div>
